--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/alura
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3307/alura
 
 spring.datasource.username=root
 spring.datasource.password=root
@@ -9,6 +9,7 @@ spring.datasource.validationQuery=SELECT 1
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.show-sql=false
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy //tra
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
